@@ -1,4 +1,7 @@
 2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/result.hxx:
+ - Fix up PQAlloc deletion handling if shared_ptr not available.
+2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
  configure.ac.in:
  - Substitute full version information.
  doc/Doxyfile.in, src/util.cxx:
